# MINISafe

./: Cargo.toml  Dockerfile  LICENSE  README.md  VMcore.rs
.github/workflows/: ci.yml  release.yml  security-scan.yml
config/: default.toml
src/: VMcore.rs  cli.rs  lib.rs  main.rs
