[package]
name = "MINIsafe-microvm"
version = "0.0.1"
edition = "2025"
authors = ["David Harmon"]
description = "Enterprise-grade MicroVM with network isolation and CI/CD integration"
license = "GPL-3.0"
repository = "https://github.com/TheMapleseed/MINISafe"
readme = "README.md"
keywords = ["microvm", "virtualization", "security", "isolation", "container"]
categories = ["virtualization", "security", "network-programming"]

[dependencies]
# Core functionality
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Concurrency and synchronization
parking_lot = "0.12"
threadpool = "1.8"

# Enhanced security dependencies
# Cryptography
ring = "0.17"  # Modern cryptographic library
base64 = "0.21"  # Base64 encoding/decoding
zeroize = "1.6"  # Secure memory clearing
seccomp = "0.1"  # System call filtering
memoffset = "0.9"  # Memory offset calculations
syscallz = "0.16"  # Syscall handling
libc = "0.2"  # System interface

# Security analysis
cargo-audit = { version = "0.18", optional = true }  # Vulnerability scanning
cargo-deny = { version = "0.14", optional = true }  # License and vulnerability checking

# URL parsing and validation
url = "2.4"  # URL parsing and validation

# Networking
ipnetwork = "0.20"
socket2 = "0.5"

# CLI formatting
prettytable-rs = "0.10"
colored = "2.0"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.8"
proptest = "1.2"
criterion = "0.5"
mockall = "0.11"
rustsec = "0.28"  # Security advisory database
arbitrary = "1.3"  # Fuzzing support
once_cell = "1.18"  # Lazy static initialization
test-log = "0.2"  # Test logging

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Add security flags for release builds
[profile.release.build-override]
opt-level = 3
codegen-units = 1
debug = false
# Enable stack protection
rustflags = ["-Z", "stack-protector=strong"]

[profile.dev]
opt-level = 0
debug = true

# Security features
[features]
default = ["wx-protection", "data-guards"]
wx-protection = []
data-guards = []
hot-reload = []
network-isolation = []
audit-logging = []
security-audit = ["cargo-audit", "cargo-deny"]
fips-compliant = []  # When enabled, uses only FIPS-compliant crypto

[[bin]]
name = "microvm"
path = "src/main.rs" 